# terminal_tetris

./: .gitignore
src/: CMakeLists.txt  main.cpp  mainField  tetris  utility.hpp
src/control/: main.cpp  test.cpp  tetrisEngin.cpp  tetrisEngine.cpp  tetrisEngine.hpp
src/control/headers/: tetrisEngine.hpp
src/control/src/: tetrisEngine.cpp
src/model/: main.cpp  strucLevelField.hpp  struct.cpp  struct.hpp  structI.cpp  structI.hpp  structJ.cpp  structJ.hpp  structL.cpp  structL.hpp  structLevelField.cpp  structLevelField.hpp  structLinesRemovedField.cpp  structLinesRemovedField.hpp  structMainField.cpp  structNextPieceField.cpp  structNextPieceField.hpp  structO.cpp  structO.hpp  structPoint.hpp  structS.cpp  structS.hpp  structScoreField.cpp  structScoreField.hpp  structT.cpp  structT.hpp  structZ.cpp  structZ.hpp  test  test.cpp  tetris
src/model/headers/: struct.hpp  structI.hpp  structJ.hpp  structL.hpp  structLevelField.hpp  structLinesRemovedField.hpp  structMainField.hpp  structNextPieceField.hpp  structO.hpp  structS.hpp  structScoreField.hpp  structT.hpp  structZ.hpp
src/model/src/: struct.cpp  structI.cpp  structJ.cpp  structL.cpp  structLevelField.cpp  structLinesRemovedField.cpp  structMainField.cpp  structNextPieceField.cpp  structO.cpp  structS.cpp  structScoreField.cpp  structT.cpp  structZ.cpp
src/view/: interface.cpp  interface.hpp  main.cpp  tetris
src/view/headers/: interface.hpp
src/view/src/: interface.cpp
